# eq-utils

./: .gitignore  README.md  pyproject.toml
docs/: mkdocs.yml
docs/src/: index.md
docs/theme/javascripts/: mathjax.js
